// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderImageRepeat renders 0 1`] = `
Array [
  .c0 {
  border-image-repeat: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageRepeat renders function 1`] = `
Array [
  .c0 {
  border-image-repeat: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageRepeat renders invalid theme path 1`] = `
Array [
  .c0 {
  border-image-repeat: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageRepeat renders negative number 1`] = `
Array [
  .c0 {
  border-image-repeat: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageRepeat renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-image-repeat: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-repeat: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-repeat: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-repeat: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-repeat: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageRepeat renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-image-repeat: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-repeat: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-image-repeat: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-repeat: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-repeat: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-repeat: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-repeat: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageRepeat renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-image-repeat: July;
}

@media May {
  .c0 {
    border-image-repeat: August;
  }
}

@media April {
  .c0 {
    border-image-repeat: September;
  }
}

@media January {
  .c0 {
    border-image-repeat: November;
  }
}

@media April {
  .c0 {
    border-image-repeat: August;
  }
}

@media June {
  .c0 {
    border-image-repeat: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: July;
}

@media May {
  .c0 {
    border-image-repeat: August;
  }
}

@media April {
  .c0 {
    border-image-repeat: September;
  }
}

@media January {
  .c0 {
    border-image-repeat: November;
  }
}

@media April {
  .c0 {
    border-image-repeat: August;
  }
}

@media June {
  .c0 {
    border-image-repeat: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-repeat: November;
  }
}

@media April {
  .c0 {
    border-image-repeat: January;
  }
}

@media January {
  .c0 {
    border-image-repeat: December;
  }
}

@media April {
  .c0 {
    border-image-repeat: April;
  }
}

@media June {
  .c0 {
    border-image-repeat: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-repeat: November;
  }
}

@media April {
  .c0 {
    border-image-repeat: January;
  }
}

@media January {
  .c0 {
    border-image-repeat: December;
  }
}

@media April {
  .c0 {
    border-image-repeat: April;
  }
}

@media June {
  .c0 {
    border-image-repeat: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageRepeat renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-image-repeat: July;
  }
}

@media April {
  .c0 {
    border-image-repeat: August;
  }
}

@media January {
  .c0 {
    border-image-repeat: September;
  }
}

@media April {
  .c0 {
    border-image-repeat: November;
  }
}

@media June {
  .c0 {
    border-image-repeat: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-image-repeat: July;
  }
}

@media April {
  .c0 {
    border-image-repeat: August;
  }
}

@media January {
  .c0 {
    border-image-repeat: September;
  }
}

@media April {
  .c0 {
    border-image-repeat: November;
  }
}

@media June {
  .c0 {
    border-image-repeat: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-repeat: January;
  }
}

@media April {
  .c0 {
    border-image-repeat: December;
  }
}

@media January {
  .c0 {
    border-image-repeat: April;
  }
}

@media April {
  .c0 {
    border-image-repeat: May;
  }
}

@media June {
  .c0 {
    border-image-repeat: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-repeat: January;
  }
}

@media April {
  .c0 {
    border-image-repeat: December;
  }
}

@media January {
  .c0 {
    border-image-repeat: April;
  }
}

@media April {
  .c0 {
    border-image-repeat: May;
  }
}

@media June {
  .c0 {
    border-image-repeat: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageRepeat renders postitive number 1`] = `
Array [
  .c0 {
  border-image-repeat: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageRepeat renders string 1`] = `
Array [
  .c0 {
  border-image-repeat: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageRepeat renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderImageRepeat renders valid theme path 1`] = `
Array [
  .c0 {
  border-image-repeat: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-repeat: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
